--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 bcrypt = "==4.0.1"
 click = "==8.1.3"
+cmake = "==3.25.2"
 Flask = "==2.2.3"
 Flask-Bcrypt = "==1.0.1"
 Flask-Login = "==0.6.2"
@@ -15,8 +16,9 @@ greenlet = "==2.0.2"
 itsdangerous = "==2.1.2"
 Jinja2 = "==3.1.2"
 MarkupSafe = "==2.1.2"
-SQLAlchemy = "==2.0.4"
-typing_extensions = "==4.5.0"
+psycopg2-binary = "==2.9.5"
+SQLAlchemy = "==1.4.23"
+typing-extensions = "==4.5.0"
 Werkzeug = "==2.2.3"
 WTForms = "==3.0.1"
 
