--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ SQLAlchemy = "==1.4.23"
 typing-extensions = "==4.5.0"
 Werkzeug = "==2.2.3"
 WTForms = "==3.0.1"
+gunicorn= "==20.1.0"
 
 [dev-packages]
 
